# src/document/parsers/federal/darf/schema.js
@@ -1,0 +1,10 @@
+module.exports = Object.freeze({
+  version: '1.0',
+  required: [
+    'identificacao.cnpj',
+    'documento.tipo',
+    'datas.vencimento',
+    'valores.total',
+    'tributos'
+  ]
+});
