# src/document/parsers/federal/dctfweb/schema.js
@@ -1,0 +1,4 @@
+module.exports = Object.freeze({
+  version: '1.0',
+  required: ['identificacao.cnpj', 'identificacao.competencia', 'declaracao.numeroRecibo', 'debitos']
+});
