# src/document/parsers/federal/efd-contribuicoes/schema.js
@@ -1,0 +1,4 @@
+module.exports = Object.freeze({
+  version: '1.0',
+  required: ['identificacao.cnpj', 'identificacao.competencia', 'escrituracao.periodoInicio', 'transmissao.numeroRecibo']
+});
